--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Changes for 1.2.1:
+
+ * Make All filter cease reusing nodes, which fixes a rather fatal bug.
+
 Changes for 1.2.0:
 
  * Made Transform filters able to be configured to find associated XSLT style-
