Fix an example on UsersGuide.asciidoc
in which the directory of a <fileset> refers was
specified by a file attribute, not by a dir attribute

--- a/doc/UsersGuide.asciidoc
+++ b/doc/UsersGuide.asciidoc
@@ -27,7 +27,7 @@ To use Chionographis, first you have to define the task:
 ----
 <!-- Define a path which includes chionographis.jar -->
 <path id="chionographis">
-  <fileset file="./lib" includes="*.jar"/>
+  <fileset dir="./lib" includes="*.jar"/>
 </path>
 
 <!-- Define chionographis task with the path -->
